--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>2.2.4</version>
         </dependency>
 
         <dependency>
