--- a/serviceREST/src/main/resources/application.properties
+++ b/serviceREST/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/springsecurity?verifyServerCertificate=false&useSSL=false&allowPublicKeyRetrieval=true&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root1234
+server.port=8081
