--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 # Created by .ignore support plugin (hsz.mobi)
-.idea
-
-# Project exclude paths
-/target/
+.DS_Store
+.idea/.gitignore
+.idea/.name
+.idea/artifacts/
+.idea/compiler.xml
+.idea/dataSources.xml
+.idea/encodings.xml
+.idea/libraries/
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+clientREST/clientREST.iml
+clientREST/target/
+serviceREST/serviceREST.iml
+serviceREST/target/
+target/
