--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,35 @@
-# Created by .ignore support plugin (hsz.mobi)
-.DS_Store
-.idea/.gitignore
-.idea/.name
-.idea/artifacts/
-.idea/compiler.xml
-.idea/dataSources.xml
-.idea/encodings.xml
-.idea/libraries/
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
-clientREST/clientREST.iml
-clientREST/target/
-serviceREST/serviceREST.iml
-serviceREST/target/
-target/
+# Project exclude paths
+/target/
+### Java template
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
